🎉auto update by Gmeek action

--- a/backup/自动异议手机版下载链接.md
+++ b/backup/自动异议手机版下载链接.md
@@ -1,1 +1,2 @@
-[release.zip](https://github.com/user-attachments/files/17354947/release.zip)
+[从GitHub下载(慢速但稳定，更新快，推荐。需解压)](https://github.com/user-attachments/files/17354947/release.zip)
+[从yukaidi网盘下载(快速，更新慢，无需解压，无法使用Github可使用这个)](https://pan1.yukaidi.com/s/NydAT9)
